--- a/public_html/app/templates/base.html
+++ b/public_html/app/templates/base.html
@@ -32,7 +32,7 @@
                 <ul id="menu">
                     {% if 'logged_in' in session: %}
                         <li><a href="#" class="link_opciones">Usuario: {{ session['usuario'] }}</a></li>
-                        <li><a href="{{ url_for('saldo') }}" class="link_opciones">Saldo: {{ session['saldo'] }}€</a></li>
+                        <li><a href="{{ url_for('saldo') }}" class="link_opciones">Saldo: <!--{{ session['saldo'] }}-->€</a></li>
                         <li><a href="{{ url_for('logout', user=session['usuario']) }}" class="link_opciones">Cerrar sesión</a></li>
                         <li><a href="{{ url_for('pedidos') }}" class="link_opciones">Historial de pedidos</a></li>
                         <li><a href="{{ url_for('coleccion') }}" class="link_opciones">Mi colección</a></li>
