--- a/public_html/app/templates/sesion.html
+++ b/public_html/app/templates/sesion.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src={{ url_for('static', filename='js/validar.js') }}></script>
   <script src={{ url_for('static', filename='js/passStrenght.js') }}></script>
+  <script src={{ url_for('static', filename='js/futureDatesOnly.js') }}></script>
 </head>
 
 <body>
@@ -94,7 +95,7 @@
             Tarjeta de credito:
             <input required type="tel" name="tarjeta" maxlength="16" placeholder="0000111122223333" maxlength="50" pattern="[0-9]{16}"><br><br>
             Caducidad tarjeta de credito:
-            <input required type="date" name="cardexpiration" min="2019-12-05"><br><br>
+            <input required type="date" name="cardexpiration" id="cardexpiration"><br><br>
             <input type="submit" class="busqueda" value="Registrarse" />
           </fieldset>
         </form>
