--- a/public_html/app/templates/index.html
+++ b/public_html/app/templates/index.html
@@ -10,23 +10,26 @@
 
 {% block content %}
 <nav class="article">
-    <h1 id=top_movies>Top peliculas ultimos 3 años</h2>
+    <h1 id="top_movies">Top peliculas ultimos 3 años</h1>
     <table>
     <tr>
         <th>Ranking</th>
         <th>Titulo</th>
         <th>Edicion</th>
+        <th>Precio</th>
         <th>Ventas</th>
         <th></th>
     </tr>
     {% for item in top_movies %}
         <tr>
             <td>{{ loop.index0 + 1}}</td>
-            <td>{{ item.movietitle }}</td>
-            <td>{{ item.description }}</td>
-            <td>{{ item.sales }}</td>
+            <td>{{ item.titulo }}</td>
+            <td>{{ item.edicion }}</td>
+            <td>{{ item.precio }}€</td>
+            <td>{{ item.ventas }}</td>
             <form action="{{ url_for('add_to_cart', id=item.prod_id) }}">
             <td><button type="submit">Añadir al carrito</button></td>
+            </form>
         </tr>
     {% endfor %} 
     </table>
