--- a/public_html/app/templates/index.html
+++ b/public_html/app/templates/index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <nav class="article">
-    <h1 id=top_movies>Top peliculas ultimos 3 años</h2>
+    <h1 id=top_movies>Top productos ultimos 3 años</h2>
     <table>
     <tr>
         <th>Ranking</th>
